--- a/src/app/secondary-components/books/books.component.html
+++ b/src/app/secondary-components/books/books.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto">
     <app-navbar></app-navbar>
-    <ngx-ui-loader></ngx-ui-loader>
+    <!-- <ngx-ui-loader></ngx-ui-loader> -->
 
     <main class="top-section mt-5">
         <header class="header">
