refactor(publications.component): improve publication date display with fallback for missing dates

--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -60,7 +60,13 @@
                         <span class="pub-authors" *ngIf="pub.author">{{ pub.author }}</span>
                         <span class="pub-venue">
                             <fa-icon icon="calendar" class="me-1"></fa-icon>
-                            {{ pub.publicationDate | date:'mediumDate'}}
+                            <ng-container
+                                *ngIf="pub.publicationDate && pub.publicationDate | date:'mediumDate' as formattedDate; else noDate">
+                                {{ formattedDate }}
+                            </ng-container>
+                            <ng-template #noDate>
+                                <span translate>publi.no-date</span>
+                            </ng-template>
                         </span>
                         <span class="pub-type-badge type-blog">
                             Blog
