--- a/src/app/secondary-components/publications/publications.component.html
+++ b/src/app/secondary-components/publications/publications.component.html
@@ -60,9 +60,8 @@
                         <span class="pub-authors" *ngIf="pub.author">{{ pub.author }}</span>
                         <span class="pub-venue">
                             <fa-icon icon="calendar" class="me-1"></fa-icon>
-                            <ng-container
-                                *ngIf="pub.publicationDate && pub.publicationDate | date:'mediumDate' as formattedDate; else noDate">
-                                {{ formattedDate }}
+                            <ng-container *ngIf="pub.publicationDate; else noDate">
+                                {{ pub.publicationDate | date:'mediumDate' }}
                             </ng-container>
                             <ng-template #noDate>
                                 <span translate>publi.no-date</span>
